--- a/src/index.css
+++ b/src/index.css
@@ -1,39 +1,46 @@
 @import "tailwindcss";
 
 @font-face {
-    font-family: 'Inter';
-    src: url('./assets/fonts/Inter-VariableFont_opsz_wght.ttf') format('truetype-variations');
-    font-weight: 100 900;
-    font-style: normal;
-    font-display: swap;
-  }
-  
-  
-  @theme {
-    --color-primary-text: #0E121B;
-    --color-secondary-text: #525866;
-    --color-third-text: #0E121B;
-    --color-start-bg: #F3F5F8;
+  font-family: 'Inter';
+  src: url('./assets/fonts/Inter-VariableFont_opsz_wght.ttf') format('truetype-variations');
+  font-weight: 100 900;
+  font-style: normal;
+  font-display: swap;
+}
 
 
-    --font-inter: 'Inter', sans-serif;
-  }
+@theme {
+  --color-primary-text: #0E121B;
+  --color-secondary-text: #525866;
+  --color-third-text: #0E121B;
+  --color-start-bg: #F3F5F8;
 
-  @layer base {
-    body {
-      font-family: var(--font-inter);
-      color: var(--color-primary-text);
-    }
 
+  --font-inter: 'Inter', sans-serif;
+}
+
+@layer base {
+  body {
+    font-family: var(--font-inter);
+    color: var(--color-primary-text);
   }
 
-  @layer components {
-    .card {
-      background-color: var(--color-white);
-      border-radius: var(--rounded-lg);
-      padding: var(--spacing-6);
-      box-shadow: var(--shadow-xl);
-    }
+}
+
+@layer components {
+  .card {
+    background-color: var(--color-white);
+    border-radius: var(--rounded-lg);
+    padding: var(--spacing-6);
+    box-shadow: var(--shadow-xl);
   }
 
-  
+  .scroll-hidden {
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+  }
+
+  .scroll-hidden::-webkit-scrollbar {
+    display: none;
+  }
+}
